fixed wrapping issue at 320 screen size

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -113,7 +113,7 @@
   }
 }
 
-@media screen and (max-width: 495px) {
+@media screen and (max-width: 600px) {
   .profile {
     flex-direction: column;
     width: 100%;
